--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #DB properties:
 db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/tasktreckes?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+db.url=jdbc:mysql://localhost:3306/tasktrecker?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 db.username=root
 db.password=root
 
@@ -10,3 +10,11 @@ hibernate.show_sql=true
 db.entitymanager.packages.to.scan=by.korneenko.reservation.beans
 hibernate.hbm2ddl.auto=update
 
+spring.thymeleaf.prefix=classpath:/frontend/index
+spring.thymeleaf.suffix=.html
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=kirill.korneenko@gmail.com
+spring.mail.password=qwe
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
